fixed email hyperlink

--- a/template.html
+++ b/template.html
@@ -23,7 +23,8 @@
           <div class="card-text">
             Employee-specific-property (github, office no, school)
           </div>
-          <div class="card-text">employee email</div>
+            <a href="mailto:employee@email.com" class="card-text">employee@email.com</a>
+          </div>
         </div>
       </div>
 
@@ -34,7 +35,8 @@
           <div class="card-text">
             Employee-specific-property (github, office no, school)
           </div>
-          <div class="card-text">employee email</div>
+            <a href="mailto:employee@email.com" class="card-text">employee@email.com</a>
+          </div>
         </div>
       </div>
 
@@ -45,7 +47,8 @@
           <div class="card-text">
             Employee-specific-property (github, office no, school)
           </div>
-          <div class="card-text">employee email</div>
+         <a href="mailto:employee@email.com" class="card-text">employee@email.com</a>
+          </div>
         </div>
       </div>
 
@@ -56,7 +59,8 @@
           <div class="card-text">
             Employee-specific-property (github, office no, school)
           </div>
-          <div class="card-text">employee email</div>
+            <a href="mailto:employee@email.com" class="card-text">employee@email.com</a>
+          </div>
         </div>
       </div>
     </div>
